force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Salaried</fullName>
        </value>
        <value>
            <fullName>Self-Employed</fullName>
        </value>
        <value>
            <fullName>Business</fullName>
        </value>
        <value>
            <fullName>Student</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>