force-app/main/default/objects/Account/fields/Existing_EMI_Total__c.field-meta.xml
<CustomField>
    <fullName>Existing_EMI_Total__c</fullName>
    <label>Existing EMI Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>