force-app/main/default/objects/Account/fields/FOIR__c.field-meta.xml
<CustomField>
    <fullName>FOIR__c</fullName>
    <label>FOIR</label>
    <formula>IF(Monthly_Income__c &gt; 0, Existing_EMI_Total__c / Monthly_Income__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>