force-app/main/default/objects/Account/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <label>KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Not Started</fullName>
        </value>
        <value>
            <fullName>In Progress</fullName>
        </value>
        <value>
            <fullName>Verified</fullName>
        </value>
        <value>
            <fullName>Failed</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>