force-app/main/default/objects/Account/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Low</fullName>
        </value>
        <value>
            <fullName>Medium</fullName>
        </value>
        <value>
            <fullName>High</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>