force-app/main/default/objects/Account/fields/Testing_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Testing_Deployment__c</fullName>
    <label>Testing Deployment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>