force-app/main/default/objects/Account/fields/Years_At_Current_Job__c.field-meta.xml
<CustomField>
    <fullName>Years_At_Current_Job__c</fullName>
    <label>Years At Current Job</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>